[gd_scene load_steps=6 format=3 uid="uid://dkqftdstqvgyq"]

[ext_resource type="Script" path="res://scenes/enemies/enemy_container.gd" id="1_fvltv"]
[ext_resource type="Shader" path="res://scenes/enemies/enemy_container.gdshader" id="2_kb0nk"]
[ext_resource type="Texture2D" uid="uid://bj1aosjg07cvp" path="res://resources/graphics/decals/white.png" id="3_4r8i1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r4bd2"]
shader = ExtResource("2_kb0nk")
shader_parameter/color = Color(0.821911, 1.73271e-06, 1.34766e-06, 1)
shader_parameter/progress = 0.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mrbf5"]
lifetime_randomness = 0.5
particle_flag_rotate_y = true
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 34.06
angle_min = -720.0
angle_max = 720.0
velocity_pivot = Vector3(-95, -25, 0)
direction = Vector3(65, 0, 0)
spread = 3.0
angular_velocity_min = -720.0
angular_velocity_max = -720.0
orbit_velocity_min = 0.094
orbit_velocity_max = 0.428
gravity = Vector3(95, 25, 0)
scale_min = 0.5

[node name="EnemyContainer" type="CharacterBody2D" groups=["Enemies", "Entity"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_fvltv")

[node name="EnemySprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_r4bd2")

[node name="EnemyCollision" type="CollisionShape2D" parent="."]

[node name="HitParticles" type="GPUParticles2D" parent="."]
modulate = Color(0.481274, 7.09929e-07, 2.40654e-07, 1)
emitting = false
amount = 12
process_material = SubResource("ParticleProcessMaterial_mrbf5")
texture = ExtResource("3_4r8i1")
lifetime = 0.5
one_shot = true

[node name="AttackNode" type="Node2D" parent="."]

[node name="AttackCD" type="Timer" parent="AttackNode"]
wait_time = 0.1
one_shot = true

[node name="EnemyProjectileSpawnPoints" type="Node2D" parent="AttackNode"]

[node name="DetectionRadius" type="Area2D" parent="AttackNode"]
collision_layer = 16

[node name="DetectionRadiusCollision" type="CollisionShape2D" parent="AttackNode/DetectionRadius"]

[node name="AttackRange" type="Area2D" parent="AttackNode"]
collision_layer = 16

[node name="AttackRangeCollision" type="CollisionShape2D" parent="AttackNode/AttackRange"]

[node name="HitBlink" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="AttackNode/AttackCD" to="." method="_on_projectile_cd_timeout"]
[connection signal="body_entered" from="AttackNode/DetectionRadius" to="." method="_on_detection_radius_body_entered"]
[connection signal="body_exited" from="AttackNode/DetectionRadius" to="." method="_on_detection_radius_body_exited"]
[connection signal="body_entered" from="AttackNode/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackNode/AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="HitBlink" to="." method="_on_hit_blink_timeout"]
